fixing ui spacings

--- a/client/src/NavBar.css
+++ b/client/src/NavBar.css
@@ -11,15 +11,32 @@
   }
   
   .brand-text {
-  font-size: 1.5rem; /* set the brand text size /
+  font-size: 1.3rem; 
+  color: black;
+  
+  
+  /* set the brand text size /
+  
   font-weight: bold; / set the font weight */
   }
   
   .create-btn {
-  margin-right: 10px; /* add margin between Create button and user profile icon */
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px; /* add margin between Create button and user profile icon */
   }
   
   .profile-icon {
-  font-size: 1.5rem; /* set the user profile icon size /
+  font-size: 2rem; /* set the user profile icon size /
   cursor: pointer; / add a pointer cursor on hover */
   }
+
+ 
+  .ml-auto {
+    display: flex;
+    flex-direction: row;
+}
